# pokeheartgold

./: .clang-format  .clang-format-ignore  .clang-format-include  .clangd  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  INSTALL.md  Makefile  README.md  Untitled.ipynb  asmdiff.sh  battle_hp_bar.s  binutils.mk  charmap.txt  common.mk  compare.bat  config.mk  data_file_order.h  devcontainer.json  dump_fs.py  dump_ppark_narc.py  dump_res_narc.sh  figure_out_ovy123.py  filesystem.mk  fix_ov.sh  flake.nix  format.sh  get_overlay_load_order.py  global.inc  graphics_files_rules.mk  heartgold.sha1  insert_labels.py  main.dtcm.cfg  main.dtcm.dump.s  main.dtcm.sbin  main.itcm.cfg  main.itcm.dump.s  (+23 more)
.devcontainer/: Dockerfile  devcontainer.json  setup-devcontainer.sh
.githooks/: pre-commit
.github/: pull_request_template.md
asm/: GX_layers.s  alph_puzzle_data.s  azalea_gymmick.s  azalea_gymmick_s.s  bag.s  bag_s.s  bag_view.s  bag_view_s.s  battle_arcade_game_board_data.s  battle_finger_data.s  battle_setup.s  berry_pots_app_rodata.s  bg_window.s  bg_window_s.s  blackthorn_gymmick.s  blackthorn_gymmick_s.s  bss_temp.s  cianwood_gymmick.s  coins.s  communication_error.s  daycare.s  dex_mon_measures.s  easy_chat.s  easy_chat_s.s  ecruteak_gymmick.s  error_handling.s  error_message_reset.s  event_data.s  field_alph_checks.s  field_blackthorn_tutors.s  field_follow_poke.s  field_follow_poke_s.s  field_map_object.s  field_move.s  field_move_s.s  field_player_avatar.s  field_roamer.s  field_take_photo.s  field_take_photo_s.s  field_use_item.s  (+659 more)
docs/: CONTRIBUTING.md  Code_Decompilation.md  How_to_see_nonmatching_code_sections.md  INSTALL.md  Known Asm files.md  Known_Asm_files.md  Static_Data_Decompilation.md  Struct_Decompilation.md  Style_Guide.md
files/: .gitattributes  .gitignore
heartgold.us/: banner.bsf  filesystem.sha1  main.sha1  rom.sha1  rom_header_template.sbin
include/: alph_checks.h  alph_puzzle.h  apricorn_tree.h  ascii_util.h  assert.h  bag.h  bag_cursor.h  bag_types_def.h  bag_view.h  battle.h  battle_arcade_game_board.h  battle_command.h  battle_controller.h  battle_controller_opponent.h  battle_controller_player.h  battle_cursor.h  battle_finger.h  battle_input.h  battle_regulation.h  battle_setup.h  battle_system.h  berry_pots_app.h  berry_pots_app_internal.h  bg_window.h  blackout.h  brightness.h  bug_contest.h  bug_contest_internal.h  camera.h  camera_translation.h  capsule.h  catching_show.h  certificates_app.h  choose_starter.h  choose_starter_app.h  coins.h  communication_error.h  config.h  daycare.h  dex_mon_measures.h  (+484 more)
renames/: config.txt  file_code_replacements.csv  file_renames.csv  lsf_renames.csv  replacements.csv
scripts/: clean_unused_includes.sh  convert_encounter_data.py  dump_mmodel_unk.py  dump_safari_enc.py  dump_zukan_data_gira.py  dump_zukan_enc.py  guess_ncgr_flags.py  palconv.sh  pmtel_book.py  rename_header.sh  resolve_nns_bins.sh
soulsilver.us/: banner.bsf  filesystem.sha1  main.sha1  rom.sha1  rom_header_template.sbin
src/: alph_checks.c  alph_puzzle.c  apricorn_tree_sys.c  ascii_util.c  azalea_gymmick.c  bag.c  bag_view.c  battle_arcade_game_board.c  battle_command.c  battle_cursor.c  battle_finger.c  battle_input.c  battle_regulation.c  battle_setup_c.c  berry_pots_app.c  berry_pots_app_tasks.c  bg_window.c  blackout.c  blackthorn_gymmick.c  brightness.c  camera.c  camera_translation.c  catching_show.c  certificates_app.c  choose_starter.c  coins.c  (+329 more)
tools/: CMakeLists.txt  narc_rename.sh
tools/asm_processor/: asm_processor.py  compile.sh
tools/asmdiff/: .gitignore  Makefile  asmdiff.sh  find_module_params.py
tools/compstatic/: .gitignore  Makefile  component.c  component.h  compress.c  compress.h  digest.c  digest.h  files.c  files.h  global.h  main.c  misc.c  misc.h  overlay_defs.c  overlay_defs.h  overlay_modules.c  overlay_modules.h  overlay_table.c  overlay_table.h  print.c  print.h  static_module.c  static_module.h  str.c  str.h
tools/csv2bin/: .gitignore  CsvFile.cpp  CsvFile.h  Makefile  Manifest.cpp  Manifest.h  Options.cpp  Options.h  global.h  main.cpp
tools/elfcoder/: .gitignore  Makefile  argparse.c  asmwriter.c  asmwriter.h  elf.h  elfread.h  encoder.c  encoder.h  instruction.c  main.c  rc4.c
tools/encdata-gs/: .gitignore  CsvFile.cpp  CsvFile.h  EncDataCsv.cpp  EncDataCsv.h  EncounterDataColumns.h  Makefile  ParseSpeciesHeader.cpp  ParseSpeciesHeader.h  encdata-gs.cpp  global.h  version.h
tools/fixrom/: fixrom.c
tools/gen_fx_consts/: .gitignore  Makefile  fx.h  fx_const.csv  fx_data.c  fx_encode.c  global.h  main.c
tools/jsonproc/: inja.hpp  jsonproc.cpp
tools/knarc/: Makefile  Narc.cpp
tools/m2ctx/: README.md  m2ctx.py  m2ctx.sh
tools/mod123encry/: .gitignore  CryptoRc4.cpp  CryptoRc4.h  Decrypt.cpp  Decrypt.h  Encrypt.cpp  Encrypt.h  Makefile  NtrRom.cpp  NtrRom.h  Options.cpp  Options.h  Overlay.cpp  Overlay.h  mod123encry.cpp  ntrtypes.h  ntruncompbw.c  ntruncompbw.h
tools/msgenc/: Gmm.cpp  Gmm.h  Makefile  MessagesConverter.cpp  MessagesConverter.h  MessagesDecoder.cpp  MessagesDecoder.h  MessagesEncoder.cpp  MessagesEncoder.h  Options.h  msgenc.cpp  util.h
tools/mwasmarm_patcher/: mwasmarm_patcher.c
tools/nitroarc/: .gitignore  Makefile
tools/nitroarc/doc/: nitroarc.1.adoc  nitroarc.3.adoc
tools/nitroarc/lib/: nitroarc.c
tools/nitroarc/lib/include/: nitroarc.h
tools/nitroarc/src/: common.c  common.h  extensions.c  extensions.h  main.c  opmode_create.c  opmode_extract.c  opmode_list.c  opmode_metadata.c  optparse.c  optparse.h
tools/nitrogfx/: .gitignore  Makefile  cJSON.c  cJSON.h  convert_png.c  font.c  font.h  gfx.c  gfx.h  global.h  json.c  lz.c  lz.h  main.c  nitrogfx-debug  options.h  util.c
tools/ntr_merge_elf/: ntr_merge_elf.sh
tools/o2narc/: Makefile  Narc.h  Options.cpp  Options.h  RelocElfReader.cpp  RelocElfReader.h  o2narc.cpp
tools/py_scripts/: dump_map_events.py  dump_scrcmds.py  dump_scrcmds_all.sh  event_mapping.csv  get_scrcmd_args.py  scrcmd.json
tools/resdat/: resdat.py
tools/scaninc/: c_file.cpp  source_file.cpp
(+12028 files in other folders)
